0.4:
 - Added conversion of factional items
 - Added console commands

0.3:
 - Initial changelog