@@ -1,4 +1,5 @@
 0.4:
+ - Added saving of pet's spells
  - Added conversion of factional items
  - Added console commands
 
